letter-spacing fix

--- a/src/components/Contacts/Contacts.scss
+++ b/src/components/Contacts/Contacts.scss
@@ -46,13 +46,13 @@
   background-color: var(--email-background);
   border-radius: 4px;
   color: var(--email-text);
-  letter-spacing: -2%;
+  letter-spacing: -0.02em;
   fill: var(--email-text);
 }
 
 .tel {
   margin-top: 8px;
   color: var(--phone-text);
-  letter-spacing: -2%;
+  letter-spacing: -0.02em;
   fill: var(--phone-text);
 }
