--- a/src/components/JobExperience/JobExperience.scss
+++ b/src/components/JobExperience/JobExperience.scss
@@ -13,7 +13,7 @@
   font-weight: 700;
   line-height: 30px;
   color: var(--text-color-1);
-  letter-spacing: -2%;
+  letter-spacing: -0.02em;
   margin: 0 0 12px;
 }
 
@@ -26,7 +26,7 @@
   font-weight: 400;
   line-height: 18px;
   color: var(--text-color-4);
-  letter-spacing: -1%;
+  letter-spacing: -0.01em;
   margin-bottom: 24px;
 }
 
@@ -35,7 +35,7 @@
   font-weight: 500;
   line-height: 21px;
   color: var(--text-color-2);
-  letter-spacing: -1%;
+  letter-spacing: -0.01em;
 }
 
 .descriptionList {
@@ -44,7 +44,7 @@
   font-weight: 500;
   line-height: 21px;
   color: var(--text-color-2);
-  letter-spacing: -1%;
+  letter-spacing: -0.01em;
 }
 
 .keySkills {
