--- a/src/components/Skills/Skill.scss
+++ b/src/components/Skills/Skill.scss
@@ -11,7 +11,7 @@
 .name {
   font-size: 14px;
   font-weight: 400;
-  letter-spacing: -1%;
+  letter-spacing: -0.01em;
   color: var(--text-color-3);
 }
 
