--- a/src/components/Skills/Skills.scss
+++ b/src/components/Skills/Skills.scss
@@ -12,6 +12,6 @@
   font-size: 20px;
   font-weight: 700;
   line-height: 24px;
-  letter-spacing: -1%;
+  letter-spacing: -0.01em;
   color: var(--text-color-3);
 }
