--- a/src/components/Summary/Summary.scss
+++ b/src/components/Summary/Summary.scss
@@ -3,7 +3,7 @@
   font-size: 20px;
   font-weight: bold;
   color: var(--text-color-1);
-  letter-spacing: -2%;
+  letter-spacing: -0.02em;
   @media screen and (max-width: 1000px) {
     display: none;
   }
@@ -13,7 +13,7 @@
   display: block;
   margin: 40px 0 12px;
   color: var(--text-color-1);
-  letter-spacing: -1%;
+  letter-spacing: -0.01em;
   font-size: 20px;
   line-height: 30px;
   font-weight: 700;
@@ -22,7 +22,7 @@
 
 .summary {
   color: var(--text-color-2);
-  letter-spacing: -2%;
+  letter-spacing: -0.02em;
 }
 
 .pfa {
